--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,4 +3,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/Itolla
 spring.datasource.username=Itolla
 spring.datasource.password=Itolla
 hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
-hibernate.hbm2ddl.auto=update
+spring.jpa.hibernate.ddl-auto=update
